# sec-issue-finder

./: .gitignore  CHANGELOG.ko.md  CHANGELOG.md  CODE_OF_CONDUCT.ko.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  SECURITY.ko.md  SECURITY.md  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml  release-binaries.yml  release-drafter.yml
docs/: git-workflow.ko.md  git-workflow.md  npm-prebuilt-binaries.md  npm-prebuilt-smoke-test.md  npm-publish-checklist.md  npm-trusted-publishing.md  onboarding.ko.md  onboarding.md  release-checklist.ko.md  release-checklist.md  release.ko.md  release.md  scif-local-testing.ko.md  scif-local-testing.md
npm/: bin.js  index.d.ts  index.js
npm/lib/: binary.js  errors.js  resolve-binary.js
npm/test/: index.test.js  prepare-platform-package.test.js  resolve-binary.test.js
npm/test/fixtures/: fake-cli.js
scripts/: prepare-platform-package.mjs
src/: cli.rs  error.rs  lib.rs  main.rs  policy.rs  scan.rs  types.rs
src/analyzers/: osv.rs
src/clients/: osv.rs
src/ecosystems/: dart.rs  mod.rs  npm.rs  pnpm.rs
src/reporters/: json.rs  mod.rs  table.rs
tests/: cli_pnpm.rs
tests/fixtures/npm/: direct-dev.json  missing-version-optional.json  missing-version.json  scoped.json  transitive.json
tests/fixtures/osv/: high-vulnerability-one.json
tests/fixtures/pnpm/: basic.yaml  dev.yaml  local-dependencies.yaml  (+11 more)
(+12 files in other folders)
