[package]
name = "sec-issue-finder"
version = "0.1.0"
edition = "2021"
description = "A multi-ecosystem open source dependency security scanner."
license = "MIT"
repository = "https://github.com/ZzozoranG/sec-issue-finder"
readme = "README.md"
keywords = ["security", "scanner", "osv", "npm", "dependencies"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
rust-version = "1.82"

[features]
test-utils = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
globset = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
